tests/sessions/python_exception.txtar
error:

Traceback (most recent call last):
  File "runner/main.py", line 314, in _call
    value = fn(*args, **kw)
            ^^^^^^^^^^^^^^^
  File "main.py", line 4, in main
    raise X()
main.X

Error: error:

Traceback (most recent call last):
  File "runner/main.py", line 314, in _call
    value = fn(*args, **kw)
            ^^^^^^^^^^^^^^^
  File "main.py", line 4, in main
    raise X()
main.X



 [0] /tmp/ak-runner-1212211774/runner/main.py:314.1,_call _call
 [1] /tmp/ak-user-2900386080/main.py:4.1,main main

-- main.py:main --
class X(Exception): pass

def main(event):
    raise X()
